--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "jasmine-ajax-node",
   "version": "1.0.0-alpha.1",
   "description": "Request mocking for Node.js using the same API as jasmine-ajax.",
-  "main": "src/index.ts",
+  "main": "dist/jasmine-ajax-node.js",
+  "typings": "dist/jasmine-ajax-node.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,8 +27,17 @@
   },
   "homepage": "https://github.com/roddolf/jasmine-ajax-node#readme",
   "devDependencies": {
+    "@microsoft/api-extractor": "^6.3.0",
+    "@types/del": "^3.0.1",
+    "@types/gulp": "^4.0.5",
     "@types/jasmine": "^3.3.9",
     "@types/node": "^11.9.4",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "rollup": "^1.2.1",
+    "rollup-plugin-typescript2": "^0.19.2",
+    "ts-node": "^8.0.2",
     "typescript": "^3.3.3"
   },
   "dependencies": {
