--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "esnext",
+    "module": "commonjs",
     "sourceMap": true,
     "importHelpers": true,
     "strict": true,
@@ -12,6 +12,8 @@
     "src/**/*"
   ],
   "exclude": [
+    "dist",
+    "temp",
     "node_modules",
     "**/*.spec.ts"
   ]
