--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "typings": "dist/jasmine-ajax-node.d.ts",
   "scripts": {
     "start": "gulp build",
-    "test": "gulp test"
+    "test": "gulp test",
+    "coverage": "gulp coverage"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "@types/del": "^3.0.1",
     "@types/gulp": "^4.0.5",
     "@types/gulp-filter": "^3.0.33",
+    "@types/gulp-istanbul": "^0.9.32",
     "@types/gulp-jasmine": "^2.4.2",
     "@types/gulp-sourcemaps": "0.0.32",
     "@types/jasmine": "^3.3.9",
@@ -39,10 +41,12 @@
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-filter": "^5.1.0",
+    "gulp-istanbul": "^1.1.3",
     "gulp-jasmine": "^4.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0",
     "jasmine-core": "^3.3.0",
+    "remap-istanbul": "^0.13.0",
     "rollup": "^1.2.1",
     "rollup-plugin-typescript2": "^0.19.2",
     "ts-node": "^8.0.2",
