--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "gulp build",
     "test": "gulp test",
-    "coverage": "gulp coverage"
+    "coverage": "gulp coverage && gulp sendCoverage"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,7 @@
     "@types/node": "^11.9.4",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
+    "gulp-codecov": "^3.0.5",
     "gulp-filter": "^5.1.0",
     "gulp-istanbul": "^1.1.3",
     "gulp-jasmine": "^4.0.0",
