--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ workflows:
             - test
           filters:
             tags:
-              only: /^v\d+\.\d+\.\d+$*/
+              only: /^v\d+\.\d+\.\d+$/
             branches:
               ignore: /.*/
       - publish-next:
