--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jasmine-ajax-node",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0",
   "description": "Request mocking for Node.js using the same API as jasmine-ajax.",
   "main": "dist/jasmine-ajax-node.js",
   "typings": "dist/jasmine-ajax-node.d.ts",
