Fix build job declaration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,10 @@ jobs:
           paths:
             - workspace
 
-    build:
+  build:
+    <<: *common
+
+    steps:
       - run: npm start
 
       # Persist the specified paths into the workspace.
