styles: Add eslint and improve styles (#17)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 common: &common
   docker:
-    - image: circleci/node:8
+    - image: circleci/node:12
   working_directory: ~/workspace
 
 add_npm_token: &add_npm_token echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
 
 version: 2
 jobs:
-  build:
+  checkout:
     <<: *common
 
     steps:
@@ -27,6 +27,20 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      # Persist the specified paths into the workspace.
+      - persist_to_workspace:
+          root: ~/
+          # Must be relative path from root
+          paths:
+            - workspace
+
+  build:
+    <<: *common
+
+    steps:
+      - attach_workspace:
+          at: ~/
+
       - run: npm start
 
       # Persist the specified paths into the workspace.
@@ -44,6 +58,15 @@ jobs:
           at: ~/
 
       - run: npm run coverage
+
+  lint:
+    <<: *common
+
+    steps:
+      - attach_workspace:
+          at: ~/
+
+      - run: npm run lint
 
   publish:
     <<: *common
@@ -71,7 +94,15 @@ workflows:
   version: 2
   build_and_publish:
     jobs:
+      - checkout:
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: /.*/
       - build:
+          requires:
+            - checkout
           filters:
             tags:
               only: /.*/
@@ -79,7 +110,15 @@ workflows:
               only: /.*/
       - test:
           requires:
-            - build
+            - checkout
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: /.*/
+      - lint:
+          requires:
+            - checkout
           filters:
             tags:
               only: /.*/
@@ -87,7 +126,9 @@ workflows:
               only: /.*/
       - publish:
           requires:
+            - build
             - test
+            - lint
           filters:
             tags:
               only: /^v\d+\.\d+\.\d+$/
@@ -95,7 +136,9 @@ workflows:
               ignore: /.*/
       - publish-next:
           requires:
+            - build
             - test
+            - lint
           filters:
             tags:
               only: /^v.*[a-zA-Z]+\.\d+$/
