--- a/package.json
+++ b/package.json
@@ -29,39 +29,39 @@
   "bugs": {
     "url": "https://github.com/roddolf/jasmine-ajax-node/issues"
   },
-  "homepage": "https://github.com/roddolf/jasmine-ajax-node#readme",
+  "homepage": "https://github.com/roddolf/jasmine-ajax-node",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.10.4",
+    "@microsoft/api-extractor": "^7.18.17",
     "@types/del": "^4.0.0",
-    "@types/gulp": "^4.0.7",
-    "@types/gulp-filter": "^3.0.33",
-    "@types/gulp-istanbul": "^0.9.32",
-    "@types/gulp-jasmine": "^2.4.2",
-    "@types/gulp-sourcemaps": "0.0.32",
-    "@types/jasmine": "^3.5.14",
+    "@types/gulp": "^4.0.9",
+    "@types/gulp-filter": "^3.0.34",
+    "@types/gulp-istanbul": "^0.9.33",
+    "@types/gulp-jasmine": "^2.4.3",
+    "@types/gulp-sourcemaps": "0.0.35",
+    "@types/jasmine": "^3.10.1",
     "@types/node": "^12.7.11",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "del": "^6.0.0",
-    "eslint": "^7.10.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "gulp": "^4.0.2",
     "gulp-codecov": "^3.0.5",
-    "gulp-filter": "^6.0.0",
+    "gulp-filter": "^7.0.0",
     "gulp-istanbul": "^1.1.3",
     "gulp-jasmine": "^4.0.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
-    "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "^6.0.0",
+    "jasmine-core": "^3.10.1",
+    "jasmine-spec-reporter": "^7.0.0",
     "remap-istanbul": "^0.13.0",
-    "rollup": "^1.23.0",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "rollup": "^2.58.3",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "tslib": "^2.0.2"
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "jasmine": ">=2"
