--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/gulp-istanbul": "^0.9.33",
     "@types/gulp-jasmine": "^2.4.3",
     "@types/gulp-sourcemaps": "0.0.35",
-    "@types/jasmine": "^3.10.1",
+    "@types/jest": "^27.0.2",
     "@types/node": "^12.20.36",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
@@ -52,11 +52,12 @@
     "gulp-jasmine": "^4.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^5.0.1",
-    "jasmine-core": "^3.10.1",
     "jasmine-spec-reporter": "^7.0.0",
+    "jest": "^27.3.1",
     "remap-istanbul": "^0.13.0",
     "rollup": "^2.58.3",
     "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
