--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "start": "npm run build",
     "build": "gulp build",
-    "test": "gulp test",
+    "test": "jest",
     "lint": "eslint . --ext .ts",
-    "coverage": "gulp coverage && gulp sendCoverage"
+    "coverage": "jest --coverage && codecov"
   },
   "repository": {
     "type": "git",
@@ -35,26 +35,17 @@
     "@types/del": "^4.0.0",
     "@types/gulp": "^4.0.9",
     "@types/gulp-filter": "^3.0.34",
-    "@types/gulp-istanbul": "^0.9.33",
-    "@types/gulp-jasmine": "^2.4.3",
-    "@types/gulp-sourcemaps": "0.0.35",
     "@types/jest": "^27.0.2",
     "@types/node": "^12.20.36",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "codecov": "^3.8.3",
     "del": "^6.0.0",
     "eslint": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "gulp": "^4.0.2",
-    "gulp-codecov": "^3.0.5",
     "gulp-filter": "^7.0.0",
-    "gulp-istanbul": "^1.1.3",
-    "gulp-jasmine": "^4.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-typescript": "^5.0.1",
-    "jasmine-spec-reporter": "^7.0.0",
     "jest": "^27.3.1",
-    "remap-istanbul": "^0.13.0",
     "rollup": "^2.58.3",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.7",
