--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "typings": "dist/jasmine-ajax-node.d.ts",
   "scripts": {
     "start": "npm run build",
-    "build": "npm run compile",
+    "build": "npm run clean && npm run compile",
     "compile": "rollup --config rollup.config.ts --configPlugin rollup-plugin-typescript2",
     "test": "jest",
     "lint": "eslint . --ext .ts",
-    "coverage": "jest --coverage && codecov"
+    "coverage": "jest --coverage && codecov",
+    "clean": "npm run clean:dist && npm run clean:temp",
+    "clean:dist": "del-cli dist",
+    "clean:temp": "del-cli temp"
   },
   "repository": {
     "type": "git",
@@ -32,7 +35,6 @@
   },
   "homepage": "https://github.com/roddolf/jasmine-ajax-node",
   "devDependencies": {
-    "@types/del": "^4.0.0",
     "@types/gulp": "^4.0.9",
     "@types/gulp-filter": "^3.0.34",
     "@types/jest": "^27.0.2",
@@ -40,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "codecov": "^3.8.3",
-    "del": "^6.0.0",
+    "del-cli": "^4.0.1",
     "eslint": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "gulp": "^4.0.2",
