--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "esModuleInterop": true,
     "types": [
       "@types/jest",
-      "@types/node",
+      "@types/node"
     ]
   },
   "exclude": [
