chore: migrate from gulp to npm scripts (#27)
- Delete gulp scripts and create npm script in their place.
- Change api-extractor in favor of rollup plugin
- Migrate jasmine tests to jest tests
- Update rest of dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,14 @@ jobs:
       - attach_workspace:
           at: ~/
 
-      - run: npm run coverage
+      - run: npm run test:coverage
+
+      # Persist coverage reports into the workspace
+      - persist_to_workspace:
+          root: ~/
+          # Must be relative path from root
+          paths:
+            - workspace
 
   lint:
     <<: *common
@@ -67,6 +74,15 @@ jobs:
           at: ~/
 
       - run: npm run lint
+
+  sendCoverage:
+    <<: *common
+
+    steps:
+      - attach_workspace:
+          at: ~/
+
+      - run: npm run test:sendCoverage
 
   publish:
     <<: *common
@@ -119,6 +135,14 @@ workflows:
       - lint:
           requires:
             - checkout
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: /.*/
+      - sendCoverage:
+          requires:
+            - test
           filters:
             tags:
               only: /.*/
