--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "ESNext",
     "sourceMap": true,
     "importHelpers": true,
     "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": [
+      "@types/jest",
+      "@types/node"
+    ]
   },
   "exclude": [
     "dist",
     "temp",
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ]
 }
