--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "jasmine-ajax-node",
   "version": "1.0.1",
   "description": "Request mocking for Node.js using the same API as jasmine-ajax.",
-  "main": "dist/jasmine-ajax-node.js",
-  "typings": "dist/jasmine-ajax-node.d.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "start": "npm run build",
-    "build": "gulp build",
-    "test": "gulp test",
+    "build": "npm run clean && npm run compile",
+    "compile": "rollup --config rollup.config.ts --configPlugin rollup-plugin-typescript2",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:sendCoverage": "codecov",
     "lint": "eslint . --ext .ts",
-    "coverage": "gulp coverage && gulp sendCoverage"
+    "clean": "npm run clean:dist && npm run clean:temp",
+    "clean:dist": "del-cli dist",
+    "clean:temp": "del-cli temp"
   },
   "repository": {
     "type": "git",
@@ -29,39 +34,27 @@
   "bugs": {
     "url": "https://github.com/roddolf/jasmine-ajax-node/issues"
   },
-  "homepage": "https://github.com/roddolf/jasmine-ajax-node#readme",
+  "homepage": "https://github.com/roddolf/jasmine-ajax-node",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.10.4",
-    "@types/del": "^4.0.0",
-    "@types/gulp": "^4.0.7",
-    "@types/gulp-filter": "^3.0.33",
-    "@types/gulp-istanbul": "^0.9.32",
-    "@types/gulp-jasmine": "^2.4.2",
-    "@types/gulp-sourcemaps": "0.0.32",
-    "@types/jasmine": "^3.5.14",
-    "@types/node": "^12.7.11",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "del": "^6.0.0",
-    "eslint": "^7.10.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "gulp": "^4.0.2",
-    "gulp-codecov": "^3.0.5",
-    "gulp-filter": "^6.0.0",
-    "gulp-istanbul": "^1.1.3",
-    "gulp-jasmine": "^4.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^5.0.1",
-    "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "^6.0.0",
-    "remap-istanbul": "^0.13.0",
-    "rollup": "^1.23.0",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^12.20.36",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "codecov": "^3.8.3",
+    "del-cli": "^4.0.1",
+    "eslint": "^8.1.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "gulp-filter": "^7.0.0",
+    "jest": "^27.3.1",
+    "rollup": "^2.58.3",
+    "rollup-plugin-dts": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "tslib": "^2.0.2"
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "jasmine": ">=2"
