--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "compile": "rollup --config rollup.config.ts --configPlugin rollup-plugin-typescript2",
     "test": "jest",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --ci --runInBand --reporters=default --reporters=jest-junit",
     "test:sendCoverage": "codecov",
     "lint": "eslint . --ext .ts",
     "clean": "npm run clean:dist && npm run clean:temp",
@@ -46,6 +47,7 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "gulp-filter": "^7.0.0",
     "jest": "^27.3.1",
+    "jest-junit": "^13.0.0",
     "rollup": "^2.58.3",
     "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
