Move to use jest/globals and fix types

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/roddolf/jasmine-ajax-node",
   "devDependencies": {
-    "@types/jest": "^29.5.6",
+    "@jest/globals": "^29.7.0",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
