--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lint": "eslint . --ext .ts",
     "clean": "npm-run-all clean:*",
     "clean:dist": "del-cli dist",
-    "clean:temp": "del-cli temp",
-    "release": "standard-version"
+    "clean:temp": "del-cli temp"
   },
   "repository": {
     "type": "git",
@@ -53,7 +52,6 @@
     "rollup": "^4.1.5",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "standard-version": "^9.5.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
