--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "start": "npm run build",
-    "build": "npm run clean && npm run compile",
+    "build": "npm-run-all clean compile",
     "compile": "rollup --config rollup.config.ts --configPlugin rollup-plugin-typescript2",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:ci": "jest --coverage --ci --runInBand --reporters=default --reporters=jest-junit",
     "test:sendCoverage": "codecov",
     "lint": "eslint . --ext .ts",
-    "clean": "npm run clean:dist && npm run clean:temp",
+    "clean": "npm-run-all clean:*",
     "clean:dist": "del-cli dist",
     "clean:temp": "del-cli temp"
   },
@@ -48,6 +48,7 @@
     "gulp-filter": "^8.0.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "npm-run-all": "^4.1.5",
     "rollup": "^4.1.5",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
@@ -60,5 +61,8 @@
   },
   "peerDependencies": {
     "jasmine": ">=2"
+  },
+  "engines" : { 
+    "node" : ">=20.0.0"
   }
 }
